Removed "Loom" Title from the en_us.json

--- a/assets/minecraft/lang/en_us.json
+++ b/assets/minecraft/lang/en_us.json
@@ -16,6 +16,8 @@
     "container.smoker": "",
     "container.stonecutter": "",
     "container.upgrade": "",
+    "container.loom": "",
+
     "item.minecraft.totem_of_undying": "Totem of Slashkig"
 }
   
