--- a/assets/minecraft/lang/en_us.json
+++ b/assets/minecraft/lang/en_us.json
@@ -16,6 +16,7 @@
     "container.stonecutter": "",
     "container.upgrade": "",
     "container.loom": "",
+    "container.brewing": "",
 
     "item.minecraft.totem_of_undying": "Totem of Slashkig"
 }
