--- a/assets/minecraft/lang/en_us.json
+++ b/assets/minecraft/lang/en_us.json
@@ -17,8 +17,7 @@
     "container.upgrade": "",
     "container.loom": "",
     "container.brewing": "",
-    "entity.minecraft.hopper_minecart": "",
+    "entity.minecraft.hopper_minecart": ""
 
-    "item.minecraft.totem_of_undying": "Totem of Slashkig"
 }
   
